--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,13 +52,14 @@ services:
     build:
       context: ./centri-backend
       dockerfile: Dockerfile
-      target: ${BACKEND_TARGET:-production}
+      target: ${BACKEND_TARGET:-development}
     container_name: centri-backend
     ports:
       - "${BACKEND_PORT:-4000}:4000"
     environment:
-      - NODE_ENV=${NODE_ENV:-production}
+      - NODE_ENV=${NODE_ENV:-development}
       - PORT=4000
+      - FRONTEND_URL=http://localhost:3044,http://127.0.0.1:3044
       # PostgreSQL Configuration
       - DB_TYPE=postgres
       - DB_HOST=postgres
@@ -71,7 +72,6 @@ services:
     volumes:
       # Mount source code for development mode
       - ./centri-backend:/app
-      - /app/node_modules
     networks:
       - app-network
     depends_on:
@@ -86,18 +86,17 @@ services:
     build:
       context: ./form-disertasi
       dockerfile: Dockerfile
-      target: ${FRONTEND_TARGET:-production}
+      target: ${FRONTEND_TARGET:-development}
     container_name: form-disertasi
     ports:
-      - "${FRONTEND_PORT:-3000}:3000"
+      - "${FRONTEND_PORT:-3044}:3044"
     environment:
-      - NODE_ENV=${NODE_ENV:-production}
-      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://backend:4000}
+      - NODE_ENV=${NODE_ENV:-development}
+      - NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL:-http://localhost:4000}
+      - BACKEND_URL=http://backend:4000
     volumes:
       # Mount source code for development mode
       - ./form-disertasi:/app
-      - /app/node_modules
-      - /app/.next
     networks:
       - app-network
     depends_on:
