Update Dockerfile and package.json to point to the correct main entry file. Remove 'namaKlienKAP' field from Form2 entity and related components, updating validation to make it optional. Implement success pages for form submissions in the dissertation survey, enhancing user experience with navigation and feedback. Add KAP form links documentation for easy access to pre-filled forms.

--- a/centri-backend/Dockerfile
+++ b/centri-backend/Dockerfile
@@ -71,4 +71,4 @@ ENV PORT=4000
 ENTRYPOINT ["/sbin/tini", "--"]
 
 # Start the application
-CMD ["node", "dist/main"]
+CMD ["node", "dist/src/main"]
